# cs2-analytics

./: .dockerignore  .gitignore  CLAUDE.md  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml
apps/api/: .eslintrc.js  Dockerfile  jest.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/api/src/: app.module.ts  health.controller.ts  main.ts
apps/api/src/__tests__/: health.controller.spec.ts
apps/api/test/: app.e2e-spec.ts  jest-e2e.json  setup.ts
apps/parser/: Dockerfile  README.md  pyproject.toml
apps/parser/src/: __init__.py  api.py  config.py
apps/parser/src/extractors/: __init__.py  core.py  events.py  grenades.py  metadata.py  ticks.py
apps/parser/src/models/: __init__.py  events.py  output.py  properties.py
apps/parser/src/streaming/: __init__.py  writer.py
apps/web/: .env.example  Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/hooks/: use-demo.ts  use-onboarding.ts  use-preferences.ts  use-rating.ts  use-replay-animation.ts  use-replay-keyboard.ts  use-replay.ts  use-upload.ts
apps/web/src/lib/: api.ts  auth-manager.ts  utils.ts  weapon-utils.spec.ts  weapon-utils.ts
apps/web/src/stores/: auth-store.ts  demo-store.ts  index.ts  onboarding-store.ts  preferences-store.ts  replay-store.ts  steam-import-store.ts  upload-store.ts
docs/: README.md
docs/business-rules/: dashboard-authentication.md  demo-access-control.md
docs/features/: 2d-replay-functional-rules.md  authentication-session-management.md
docs/wireframes/: CS2 Analytics - Wireframes Replay 2D.html
infrastructure/docker/: README.md  docker-compose.prod.yml  docker-compose.replicas.yml  docker-compose.timescale.yml  docker-compose.yml
infrastructure/docker/config/haproxy/: haproxy.cfg
infrastructure/docker/config/pgbouncer/: userlist.txt
infrastructure/docker/config/postgres/: postgresql-replica.conf  postgresql.conf
infrastructure/docker/config/timescale/: postgresql.conf
infrastructure/docker/init-scripts/postgres/: 02-partitioning.sql
(+233 files in other folders)
